fix dropped resource alignment

--- a/apps/doc-builder-v2/doc_builder_v2_app/static/css/styles.css
+++ b/apps/doc-builder-v2/doc_builder_v2_app/static/css/styles.css
@@ -355,12 +355,14 @@
     padding: 4px;
     background-color: #f8f8f8;
     border-radius: 3px;
+    text-align: left;
 }
 
 .dropped-resource-container .dropped-resource {
     display: inline-block;
     width: auto;
     margin-bottom: 4px;
+    text-align: left;
 }
 
 .resource-description {
